Updated with Valerie's comments

--- a/Module8_pandas1.ipynb
+++ b/Module8_pandas1.ipynb
@@ -57,7 +57,7 @@
         "\n",
         "Created by Valerie Carr and Jaime Zuspann  \n",
         "Licensed under a Creative Commons license: CC BY-NC-SA  \n",
-        "Last updated: Feb 13, 2022  \n",
+        "Last updated: Feb 18, 2022  \n",
         "\n",
         "**Learning outcomes**  \n",
         "1. Learn to read in spreadsheet data (\"dataframes\") in Python with the Pandas library.\n",
@@ -353,22 +353,26 @@
       "cell_type": "markdown",
       "source": [
         "## 6. Subsetting Dataframes\n",
-        "Subsetting a dataframe allows you to view just a portion (a subset) of the dataframe. The section above shows a few ways to do this, but they don't allow you to specify which entries to display. The methods covered in this section let you take complete control over which entries to display.\n",
+        "Subsetting a dataframe allows you to view just a portion (a subset) of the dataframe. The section above shows a few ways to do this, but they're relatively limited. The methods covered in this section let you take complete control over which entries to display.\n",
         "\n",
         "Generally speaking, dataframes are organized as follows:  \n",
-        "* each column is a variable (e.g., `totalPop`, `hispPop`)\n",
-        "* each row is an observation (e.g., data for a particular state)\n",
+        "* Each column is a variable (e.g., `totalPop`, `hispPop`)\n",
+        "* Each row is an observation (e.g., data for a particular state)\n",
         "\n",
         "We can subset a dataframe according to variables (columns) or observations (rows).\n",
         "\n",
         "### 6a. Subsetting Observations\n",
-        "Subsetting observations is accomplished using Boolean expressions to select those that meet some criteria.  \n",
+        "Subsetting observations is accomplished using Boolean expressions to select portions of the dataframe that meet some criteria.  \n",
         "\n",
         "Say, for example, that we want to view data from all states with a total population greater than 15 million. We could accomplish this using the line of code below:  \n",
         "\n",
         "`my_df[my_df.totalPop > 15000000]`  \n",
         "\n",
-        "The part within the square brackets is the Boolean expression that selects from the observations only those that meet the criteria.  \n",
+        "Breaking down the syntax:\n",
+        "* First, we need to specify which dataframe to subset (`my_df`)\n",
+        "* Next, we use square brackets with a Boolean expression inside to indicate *how* we want to subset the dataframe in question\n",
+        "* In our case, we're specifying that we want to look in the `totalPop` column for values greater than 15 million\n",
+        "* The output of this code will be observations (rows) meeting our criteria  \n",
         "\n",
         "<font color='red'>Exercise 8</font>  \n",
         "Run the cell below to see this subsetting method in action."
@@ -391,11 +395,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "We can use the same general syntax to find observations that meet any criteria we're interested in. You essentially just need to choose three things:  \n",
+        "We can use the same general syntax to find observations that meet any criteria we're interested in. You essentially just need to choose three things (in addition, of course, to indicating which dataframe is relevant):  \n",
         "\n",
-        "* the column you're interested in\n",
-        "* a Boolean operator (<, <=, >, >=, ==, !=)\n",
-        "* a value (a string or number)  \n",
+        "* The column you're interested in\n",
+        "* A Boolean operator (such as <, <=, >, >=, ==, !=)\n",
+        "* A value (a string or number)  \n",
         "\n",
         "All together, the general syntax looks like this:  \n",
         ">`df_name[df_name.col_name == value]`  \n",
@@ -403,7 +407,7 @@
         "where `==` can be replaced with any comparison operator.  \n",
         "\n",
         "<font color='red'>Exercise 9</font>  \n",
-        "Subset the `my_df` dataframe to show data for only `'California'`."
+        "Subset `my_df` to show data for only `'California'`. Hint: you'll need to think about which column contains the state names!"
       ],
       "metadata": {
         "id": "EvCC2nrchLbj"
@@ -424,7 +428,7 @@
       "cell_type": "markdown",
       "source": [
         "<font color='red'>Exercise 10</font>  \n",
-        "Now display only the data for states with a Hispanic population less than or equal to 20 thousand."
+        "Now display only the data for states with a Hispanic population less than or equal to 20 thousand. Again, think about which column to specify."
       ],
       "metadata": {
         "id": "rWOWCcGnjyee"
@@ -445,16 +449,22 @@
       "cell_type": "markdown",
       "source": [
         "### 6b. Multiple Criteria\n",
-        "We can also combine Boolean expressions to make complex criteria:\n",
-        "* data that meet criteria 1 *and* 2\n",
-        "* data that meet criteria 1 *or* 2  \n",
+        "We can also combine Boolean expressions to make more complex criteria:\n",
+        "* Data that meet criteria 1 *and* 2\n",
+        "* Data that meet criteria 1 *or* 2  \n",
         "\n",
-        "The syntax here is different than what you've already learned. Here, the And operator is `&` and the Or operator is `|` (the \"pipe\" symbol).  \n",
+        "The syntax here is different than what you've previously learned about combining Boolean expressions, which was to simply use the words `and` and `or`. \n",
+        "\n",
+        "In Pandas, we instead use symbols:\n",
+        "* The `&` symbol represents `and`\n",
+        "* The `|` symbol (\"pipe\") represents `or`\n",
+        "\n",
+        "See below for pseudocode examples of each:\n",
         "\n",
         "And: `my_df[(criteria1) & (criteria2)]`  \n",
         "Or: `my_df[(criteria1) | (criteria2)]` \n",
         "\n",
-        "Note: It is important to put parentheses around each criteria. The precedence of the `&` and `|` operators is greater than that of the comparison operators.\n",
+        "Note: It is important to put parentheses around each criteria, i.e., each set of Boolean expressions. The precedence of the `&` and `|` operators is greater than that of the comparison operators, so the parentheses help to force Pandas to attend to each Boolean expression first.\n",
         "\n",
         "<font color='red'>Exercise 11</font>  \n",
         "Run the cell below to see the subset of states with a total population over 7 million and a Hispanic population over 1 million."
@@ -478,7 +488,7 @@
       "cell_type": "markdown",
       "source": [
         "<font color='red'>Exercise 12</font>  \n",
-        "Now write the code to display the states that have a total population less than 8 hundred thousand **or** a Hispanic population greater than 5 million."
+        "Now write your own code to display the states that have a total population less than 800 thousand **or** a Hispanic population greater than 5 million."
       ],
       "metadata": {
         "id": "Xx__BicqnzIm"
@@ -538,6 +548,27 @@
       ],
       "metadata": {
         "id": "8fdAwncOrVR7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<font color='red'>Exercise 15</font>  \n",
+        "Now that you know how to create complex criteria, try out one of your own below! Feel free to choose whatever sounds interesting."
+      ],
+      "metadata": {
+        "id": "gtj7Mp5ltPiI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "ohvDlwGHtQTE"
       },
       "execution_count": null,
       "outputs": []
