Add solutions for additional exercises

--- a/Module8_pandas1_solutions.ipynb
+++ b/Module8_pandas1_solutions.ipynb
@@ -69,7 +69,7 @@
         "## 3. Pandas Dataframes\n",
         "\n",
         "<font color='red'>Exercise 1 solution</font>  \n",
-        "Simply run the cell. No output will be produced."
+        "Remember when the cell is run, no output will be produced."
       ]
     },
     {
@@ -202,10 +202,174 @@
     {
       "cell_type": "code",
       "source": [
-        "my_df[\"hispPop\"]"
+        "my_df['hispPop']"
       ],
       "metadata": {
         "id": "Pm0ENFyjhLPx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<font color='red'>Exercise 8 solution</font>  \n",
+        "Run the cell to see the output."
+      ],
+      "metadata": {
+        "id": "KEWiPpflWtPr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_df[my_df.totalPop > 15000000]"
+      ],
+      "metadata": {
+        "id": "4jF-6dR5W1VH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<font color='red'>Exercise 9 solution</font>  "
+      ],
+      "metadata": {
+        "id": "di6Q5QODW27s"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_df[my_df.state == 'California']"
+      ],
+      "metadata": {
+        "id": "Cr8fc_VwW7rV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<font color='red'>Exercise 10 solution</font>  "
+      ],
+      "metadata": {
+        "id": "ojJTA7ZpXIuu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_df[my_df.hispPop <= 20000]"
+      ],
+      "metadata": {
+        "id": "vXevyDFbXOl-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<font color='red'>Exercise 11 solution</font>  \n",
+        "Run the cell to see the output."
+      ],
+      "metadata": {
+        "id": "goNHztrwXX74"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_df[(my_df.totalPop > 7000000) & (my_df.hispPop > 1000000)]"
+      ],
+      "metadata": {
+        "id": "GS4NGwg0XdTo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<font color='red'>Exercise 12 solution</font>  "
+      ],
+      "metadata": {
+        "id": "J34--2qUXj8m"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_df[(my_df.totalPop < 800000) | (my_df.hispPop > 5000000)]"
+      ],
+      "metadata": {
+        "id": "9XJK5ph5Xlcs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<font color='red'>Exercise 13 solution</font>  \n",
+        "Run the cell to see the output."
+      ],
+      "metadata": {
+        "id": "hcDcLYmRdUkG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_df[(my_df.hispPop / my_df.totalPop) > 0.3]"
+      ],
+      "metadata": {
+        "id": "Tcgfi2-9dUJj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<font color='red'>Exercise 14 solution</font>  "
+      ],
+      "metadata": {
+        "id": "qjL496ohdemz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_df[(my_df.totalPop > 5000000) & ((my_df.hispPop / my_df.totalPop) < 0.05)]"
+      ],
+      "metadata": {
+        "id": "EC4dim7Mdctc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<font color='red'>Exercise 15 solution</font>  \n",
+        "This should be anything you can think of! For an idea, try showing only data for states with a total population greater than 5 million and whole names start in the second half of the alphabet."
+      ],
+      "metadata": {
+        "id": "Mq8PdrC-diIU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "vnfoHq7hd8j9"
       },
       "execution_count": null,
       "outputs": []
