Change picture to match corresponding module

--- a/Module8_pandas1_solutions.ipynb
+++ b/Module8_pandas1_solutions.ipynb
@@ -43,8 +43,8 @@
         "id": "lnXOxVPEkZ5f"
       },
       "source": [
-        "<img src='https://cdn.pixabay.com/photo/2016/08/25/15/30/dictionary-1619740_1280.jpg' width=700>  \n",
-        "Photo by stevepb production from Pixabay"
+        "<img src='https://cdn.pixabay.com/photo/2019/09/08/19/54/panda-4461766_1280.jpg' width=700>  \n",
+        "Photo by qgadrian production from Pixabay"
       ]
     },
     {
@@ -80,7 +80,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -103,7 +103,7 @@
         "filepath = \"https://raw.githubusercontent.com/valeriecarr/engr120/main/S21/state_pop.csv\"\n",
         "my_df = pd.read_csv(filepath)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -213,6 +213,7 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## 6. Subsetting Dataframes\n",
         "<font color='red'>Exercise 8 solution</font>  \n",
         "Run the cell to see the output."
       ],
