Made small revisions to exercises

--- a/Module8_pandas1.ipynb
+++ b/Module8_pandas1.ipynb
@@ -171,7 +171,7 @@
       "source": [
         ""
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -209,7 +209,7 @@
       "source": [
         "filepath = \"https://raw.githubusercontent.com/valeriecarr/engr120/main/S21/state_pop.csv\""
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -234,7 +234,7 @@
         "id": "BcDZjBqmrvew"
       },
       "source": [
-        "my_df.head()"
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -407,7 +407,7 @@
         "where `==` can be replaced with any comparison operator.  \n",
         "\n",
         "<font color='red'>Exercise 9</font>  \n",
-        "Subset `my_df` to show data for only `'California'`. Hint: you'll need to think about which column contains the state names!"
+        "Subset `my_df` to show data for only `'California'`. Hint: you'll need to think about which column contains the state names, and how to check whether any state names in that column are equivalent to 'California'."
       ],
       "metadata": {
         "id": "EvCC2nrchLbj"
