Made revisions according to Valerie's comments

--- a/Module9_pandas2.ipynb
+++ b/Module9_pandas2.ipynb
@@ -57,12 +57,12 @@
         "\n",
         "Created by Valerie Carr and Jaime Zuspann  \n",
         "Licensed under a Creative Commons license: CC BY-NC-SA  \n",
-        "Last updated: Feb 20, 2022  \n",
+        "Last updated: Mar 4, 2022  \n",
         "\n",
         "**Learning outcomes**  \n",
-        "<font color='red'>Update?</font>  \n",
-        "1. Learn to read in spreadsheet data (\"dataframes\") in Python with the Pandas library.\n",
-        "2.  Learn to manipulate the contents of a dataframe with Pandas methods"
+        "1. Continue learning how to use Pandas methods to view desired subsets of a dataframe.\n",
+        "2. Learn to sort the contents of a dataframe.\n",
+        "3. Learn to rename, add, and remove columns from a dataframe."
       ]
     },
     {
@@ -87,7 +87,9 @@
         "        * Incorrect: `print( my_variable )`\n",
         "\n",
         "<font color='red'>Exercise 0</font>  \n",
-        "Before you start with this module, run the cell below in order for the rest of the exercises to work. Again, you will see no output. These lines simply import the Pandas library and read the csv file into the `my_df` variable as a dataframe, as you learned in the last module."
+        "Before you start with this module, run the cell below to read in the same CSV file we were working with last time. As a reminder, you won't see any output. These lines simply import the Pandas library and read the csv file into the `my_df` variable as a dataframe.\n",
+        "\n",
+        "If you'd like a reminder of what the contents of this dataframe look like, you can insert a new code cell beneath the one we've provided, and check the header."
       ]
     },
     {
@@ -100,7 +102,7 @@
       "metadata": {
         "id": "wkbD145FMFJ4"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -112,13 +114,13 @@
         "## 2. Smallest or Largest Observations\n",
         "Pandas has simple methods for determining the smallest or largest set of 'n' observations in a dataframe.  \n",
         "\n",
-        "Smallest: `df_name.nsmallest(n, ‘col_name’)`  \n",
-        "Largest: `df_name.nlargest(n, ‘col_name')`  \n",
+        "Smallest: `df_name.nsmallest(n, 'col_name')`  \n",
+        "Largest: `df_name.nlargest(n, 'col_name')`  \n",
         "\n",
         "The `n` in these expressions represents an integer value of the desired set size. \n",
         "\n",
         "<font color='red'>Exercise 1</font>  \n",
-        "The cell below subsets the dataframe to show the state with the highest population. Run the cell to see the output."
+        "The cell below subsets the dataframe to show the state with the largest total population, i.e., the single largest value in the `totalPop` column. Run the cell to see the output."
       ]
     },
     {
@@ -136,7 +138,7 @@
       "cell_type": "markdown",
       "source": [
         "<font color='red'>Exercise 2</font>  \n",
-        "Now subset the dataframe to show the five states with the smallest Hispanic population."
+        "Now you try! Write code that will subset the dataframe to show the *five* states with the smallest Hispanic population. Hint: You'll use a different column this time, as well as a different integer."
       ],
       "metadata": {
         "id": "xCHsi7i8VkMb"
@@ -167,7 +169,7 @@
         "where x is an integer indicating the desired sample size.  \n",
         "\n",
         "<font color='red'>Exercise 3</font>  \n",
-        "Using the syntax shown above, display a sample of six rows of the `my_df` dataframe."
+        "Using the syntax shown above, display a random sample of six rows of the `my_df` dataframe."
       ]
     },
     {
@@ -193,11 +195,11 @@
         "Attribute method: `df_name.col_name`  \n",
         "Label method: `df_name['col_name']`  \n",
         "\n",
-        "But what if you want to subset a specific selection of columns? The generic syntax for this is:  \n",
+        "But what if you want to subset more than one column? The generic syntax for this is:  \n",
         "\n",
         "`df_name[['col_1', 'col_2', 'etc.']]`\n",
         "\n",
-        "Notice the double brackets here, this is different than the Label approach that uses only one set of brackets with one argument for the column name. \n",
+        "Notice the double brackets here. The reason we have an interior set of brackets is because we're providing Python with a list of columns (and lists use brackets!). \n",
         "\n",
         "<font color='red'>Exercise 4</font>  \n",
         "In the cell below, subset the `my_df` dataframe to show just the `state` and `totalPop` columns."
@@ -244,7 +246,7 @@
       "cell_type": "markdown",
       "source": [
         "<font color='red'>Exercise 5</font>  \n",
-        "Now try something a bit harder. In the cell below, write a line of code to display the `state` and `hispPop` columns for states with less than a 3% Hispanic population."
+        "Now try something a bit harder. In the cell below, write a line of code to display the `state` and `hispPop` columns for states with less than a 3% (i.e., 0.03) Hispanic population."
       ],
       "metadata": {
         "id": "XyvYT1LbTLCA"
@@ -265,12 +267,14 @@
       "cell_type": "markdown",
       "source": [
         "## 6. Sorting Dataframes\n",
-        "So far we've seen how to choose which rows or columns to display, but it's often useful to view all of the data sorted by a particular column. By default, the observations are sorted according to their ID number (the number in the left column). Our example dataframe happens to already have the rows sorted alphabetically by state name, but what if we wanted to see the data sorted by the total population?\n",
+        "So far we've seen how to choose which rows or columns to display, but it's often useful to view all of the data sorted by a particular column. By default, the observations are sorted according to their ID number (the number in the left column). Our example dataframe happens to already have the rows sorted alphabetically by state name, but what if we wanted to see the data sorted by a different column, such as the total population?\n",
         "\n",
         "### 6a. Ascending Order\n",
-        "The `sort_values()` method provides exacly this functionality. To call this method, follow the this syntax:  \n",
+        "The `sort_values()` method provides exactly this functionality, using the generic syntax below:  \n",
         "\n",
         "`df_name.sort_values(by = 'col_name')`\n",
+        "\n",
+        "Note that you can't simply include the desired column name in parentheses; rather, you need the full phrase `(by = 'col_name')`\n",
         "\n",
         "<font color='red'>Exercise 6</font>  \n",
         "Try sorting the `my_df` dataframe by the `totalPop` column. "
@@ -294,7 +298,7 @@
       "cell_type": "markdown",
       "source": [
         "### 6b. Descending Order\n",
-        "By default, the `sort_values()` method sorts in ascending order. To sort in descending order, one more argument is necessary:  \n",
+        "By default, the `sort_values()` method sorts in ascending order, i.e., from smallest to largest (or A-Z in the case of words). To sort in descending order, one more argument is necessary:  \n",
         "\n",
         "`df_name.sort_values(by = 'col_name', ascending = False)`  "
       ],
@@ -307,7 +311,7 @@
       "source": [
         "---\n",
         "###<font color='blue'>Reminder</font>\n",
-        "The keyword `False` does not have quotation marks surrounding it--it is a Boolean literal, not a string.\n",
+        "The keyword `False` does not have quotation marks surrounding it; it is a special data type (Boolean), not a string.\n",
         "\n",
         "---"
       ],
@@ -319,7 +323,7 @@
       "cell_type": "markdown",
       "source": [
         "### 6c. Viewing vs. Changing\n",
-        "It is important to understand that the `sort_values()` method does not change the original dataframe, it just creates a new view. To verify that the data haven't changed, we can simply look at the dataframe's header.\n",
+        "It is important to note that the `sort_values()` method does *not* change the original dataframe, rather, it simply allows you to view a sorted version without changing the dataframe itself. To verify that the dataframe hasn't changed, we can simply look at the dataframe's header.\n",
         "\n",
         "<font color='red'>Exercise 7</font>  \n",
         "Run the cell below to display the first five rows of the dataframe to verify that the original order hasn't changed."
@@ -342,10 +346,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "If you actually want the dataframe to change according to the `sort_values()` method, you'll need to include yet another argument in the parentheses: `inplace = True`.\n",
+        "If you actually want the dataframe to change according to the `sort_values()` method, you'll need to include yet another argument in the parentheses: `inplace = True`. \n",
+        "\n",
+        "With this command you're essentially saying: I want to sort the dataframe \"in place\" by directly changing it.\n",
         "\n",
         "<font color='red'>Exercise 8</font>  \n",
-        "Sort the `my_df` dataframe again by total population in ascending order (default) as you did in Exercise 6, but include the above argument this time to actually change the dataframe. Then, add a line and display the first five rows again to ensure that the dataframe has changed."
+        "Sort the `my_df` dataframe again by total population in ascending order (default) as you did in Exercise 6, but include the above argument this time to actually change the dataframe. Then, add a line and display the first five rows again to ensure that the dataframe has changed as you intended."
       ],
       "metadata": {
         "id": "V5N4Vs7kkHam"
@@ -366,15 +372,20 @@
       "cell_type": "markdown",
       "source": [
         "### 6d. Sorting by More than One Column\n",
-        "A dataframe can also be sorted by two columns. The dataframe we've been working with isn't a great example for this, but say you wanted to sort a dataframe of college students first by their year in school and then by last name. Doing so would look somthing like this:  \n",
+        "A dataframe can also be sorted by two or more columns (i.e., first sort by column x, then by column y, etc.). The small dataframe that we've been working with isn't a great example for this, so let's consider the following scenario:\n",
+        "\n",
+        "Say you wanted to sort a dataframe that contained various pieces of information about college students. You want to sort the dataframe first by their year in school and then by last name. Doing so would look somthing like this:  \n",
         "\n",
         "`students_df.sort_values(by = ['year', 'last_name'])`\n",
         "\n",
-        "This line of code would display the whole dataframe of students sorted by year and then by last name within each year. \n",
+        "This line of code would display the dataframe sorted by year and then by last name within each year. \n",
         "\n",
-        "Therefore, the generic syntax to sort first by 'col_1' and then by 'col_2', etc., is:  \n",
+        "See below for more generic syntax to sort first by 'col_1' and then by 'col_2', etc., is:  \n",
         "\n",
-        "`df_name.sort_values(by = ['col_1', 'col_2', 'etc.'])`"
+        "`df_name.sort_values(by = ['col_1', 'col_2', 'etc.'])`\n",
+        "\n",
+        "<font color='red'>Exercise 9</font>  \n",
+        "Although we don't have a real dataframe with student data for you to play with, nontheless you can practice writing code for how to sort the dataframe first by `last_name`, then `first_name`, then `major`. No need to actually run the cell given that Python will give you an error that the dataframe doesn't actually exist!"
       ],
       "metadata": {
         "id": "Xx__BicqnzIm"
