--- a/Module9_pandas2.ipynb
+++ b/Module9_pandas2.ipynb
@@ -57,7 +57,7 @@
         "\n",
         "Created by Valerie Carr and Jaime Zuspann  \n",
         "Licensed under a Creative Commons license: CC BY-NC-SA  \n",
-        "Last updated: Mar 4, 2022  \n",
+        "Last updated: Mar 11, 2022  \n",
         "\n",
         "**Learning outcomes**  \n",
         "1. Continue learning how to use Pandas methods to view desired subsets of a dataframe.\n",
@@ -102,7 +102,7 @@
       "metadata": {
         "id": "wkbD145FMFJ4"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -389,6 +389,139 @@
       ],
       "metadata": {
         "id": "Xx__BicqnzIm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 7. Modifying Dataframes\n",
+        "Whenever you read in a dataframe, you may wish to modify it in some way, especially if the dataset wasn't originally yours. While there are many ways to modify a dataframe, we'll only be dealing with a few here:  \n",
+        "* rename columns\n",
+        "* add columns\n",
+        "* remove columns"
+      ],
+      "metadata": {
+        "id": "OrHdS_uEG_qt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 7a. Renaming Columns\n",
+        "Say you read in a dataframe, and the column names are specified a bit differently than you'd like. For instance, maybe you prefer using underscores between words rather than the camel case that our states dataframe uses. The general syntax for renaming columns of a dataframe is as follows:  \n",
+        "```\n",
+        "df_name.rename(columns={\n",
+        "  'old1': 'new1',\n",
+        "  'old2': 'new2',\n",
+        "  'old3': 'new3'},\n",
+        "  inplace = True)\n",
+        "```\n",
+        "You only need to specify columns you'd like to rename, not those you'd like to keep as they are.\n",
+        "\n",
+        "<font color='red'>Exercise 10</font>  \n",
+        "Rename the the columns of our `my_df` dataframe as follows:  \n",
+        "* Instead of `totalPop`, use `total_pop`\n",
+        "* Instead of `hispPop`, use `hisp_pop`\n",
+        "\n",
+        "Add a new line afterward and include `my_df.head()` to confirm that the changes were made accurately."
+      ],
+      "metadata": {
+        "id": "uctZgsm_HiGe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_df.rename(columns={\n",
+        "  'totalPop': 'total_pop',\n",
+        "  'hispPop': 'hisp_pop'},\n",
+        "  inplace = True)\n",
+        "my_df.head()"
+      ],
+      "metadata": {
+        "id": "HPJsjH3bI2HK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 7b. Adding New Columns\n",
+        "You may feel like a dataframe is incomplete after reading it in. Perhaps you'd like to add another column of information. To do so, there are two steps:  \n",
+        "1. Decide what to call the new column\n",
+        "2. Calculate values to put in the new column\n",
+        "\n",
+        "Here's the general syntax to use:  \n",
+        "`df_name['new_col_name'] = formula for calculating new values`\n",
+        "\n",
+        "You can use values in the existing columns in the calculation for the new column. For instance, if you'd like to add a `hisp_ratio` column to our states dataframe, you'd take the value in the `hisp_pop` column for any given state and divide by the value in its `total_pop` column, then multiply by 100.  \n",
+        "\n",
+        "<font color='red'>Exercise 11</font>  \n",
+        "Run the cell below to see the output. This is the code for the example above."
+      ],
+      "metadata": {
+        "id": "X4OMiK7CI3AN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_df['hisp_ratio'] = my_df.hisp_pop / my_df.total_pop * 100\n",
+        "my_df.head()"
+      ],
+      "metadata": {
+        "id": "cuRSwpspKR2w"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<font color='red'>Exercise 12</font>  \n",
+        "Now say you'd also like a column `non_hisp_pop` that gives the non-Hispanic population for each state. Write the code for this below, and be sure to display the results using `my_df.head()` at the end."
+      ],
+      "metadata": {
+        "id": "V8MDANBHL9yl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "5j8oY2uOMUQl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Some other examples you might create a new column for a dataframe to know:  \n",
+        "* The difference between a company's profits in one year compared to the previous (subtraction)\n",
+        "* Total points earned across different parts of an exam (addition)\n",
+        "* Stock price multiplied by number of shares (multiplication)\n",
+        "* Course grade for students across multiple weighted exams (addition, multiplication, and division)"
+      ],
+      "metadata": {
+        "id": "cXQooIHbMfsx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 7c. Removing Columns\n",
+        "Just as adding columns can be beneficial, removing columns is sometimes necessary. To remove one or more columns from a dataframe, we use the `drop()` method:  \n",
+        "`df_name.drop(columns = ['col1', 'col2', 'etc.'], inplace = True)`  \n",
+        "\n",
+        "<font color='red'>Exercise 13</font>  \n",
+        "Say you decide that you don't want the `hisp_ratio` or the `non_hisp_pop` columns afterall. Remove these columns from the `my_df` dataframe using the syntax above as a reference."
+      ],
+      "metadata": {
+        "id": "KCYaD8o5bJf2"
       }
     },
     {
