Add solutions to new exercises included in addition to corresponding module

--- a/Module9_pandas2_solutions.ipynb
+++ b/Module9_pandas2_solutions.ipynb
@@ -57,7 +57,7 @@
         "\n",
         "Created by Valerie Carr and Jaime Zuspann  \n",
         "Licensed under a Creative Commons license: CC BY-NC-SA  \n",
-        "Last updated: Feb 21, 2022  "
+        "Last updated: Mar 11, 2022  "
       ]
     },
     {
@@ -293,6 +293,102 @@
       ],
       "metadata": {
         "id": "DkN3gUFTmopA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 7. Modifying Dataframes\n",
+        "<font color='red'>Exercise 11 solution</font>  \n",
+        "Rename the the columns of our my_df dataframe as follows:\n",
+        "* Instead of `totalPop`, use `total_pop`  \n",
+        "* Instead of `hispPop`, use `hisp_pop`  \n",
+        "\n",
+        "Add a new line afterward and include my_df.head() to confirm that the changes were made accurately."
+      ],
+      "metadata": {
+        "id": "exvF11mxci5o"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_df.rename(columns={\n",
+        "  'totalPop': 'total_pop',\n",
+        "  'hispPop': 'hisp_pop'},\n",
+        "  inplace = True)\n",
+        "my_df.head()"
+      ],
+      "metadata": {
+        "id": "DuvkcfD7dfC0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<font color='red'>Exercise 12 solution</font>  \n",
+        "Run the cell below to see the output."
+      ],
+      "metadata": {
+        "id": "KixCeApFdn5s"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_df['hisp_ratio'] = my_df.hisp_pop / my_df.total_pop * 100\n",
+        "my_df.head()"
+      ],
+      "metadata": {
+        "id": "5SxX9Rlvdpxv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<font color='red'>Exercise 13 solution</font>  \n",
+        "Now say you'd also like a column `non_hisp_pop` that gives the non-Hispanic population for each state. Write the code for this below, and be sure to display the results using `my_df.head()` at the end."
+      ],
+      "metadata": {
+        "id": "ZM2riMsWduLg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_df['non_hisp_pop'] = my_df.total_pop - my_df.hisp_pop\n",
+        "my_df.head()"
+      ],
+      "metadata": {
+        "id": "G6AObKLFdzcN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<font color='red'>Exercise 14 solution</font>  \n",
+        "Say you decide that you don't want the `hisp_ratio` or the `non_hisp_pop` columns afterall. Remove these columns from the `my_df` dataframe using the syntax above as a reference."
+      ],
+      "metadata": {
+        "id": "Xs1FMO9meIXJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_df.drop(columns = ['hisp_ratio', 'non_hisp_pop'], inplace = True)\n",
+        "my_df.head()"
+      ],
+      "metadata": {
+        "id": "MTU7SklSeKGC"
       },
       "execution_count": null,
       "outputs": []
