Updated according to Valerie's comments

--- a/Module9_pandas2.ipynb
+++ b/Module9_pandas2.ipynb
@@ -57,7 +57,7 @@
         "\n",
         "Created by Valerie Carr and Jaime Zuspann  \n",
         "Licensed under a Creative Commons license: CC BY-NC-SA  \n",
-        "Last updated: Mar 11, 2022  \n",
+        "Last updated: Mar 12, 2022  \n",
         "\n",
         "**Learning outcomes**  \n",
         "1. Continue learning how to use Pandas methods to view desired subsets of a dataframe.\n",
@@ -102,7 +102,7 @@
       "metadata": {
         "id": "wkbD145FMFJ4"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -395,10 +395,10 @@
       "cell_type": "markdown",
       "source": [
         "## 7. Modifying Dataframes\n",
-        "Whenever you read in a dataframe, you may wish to modify it in some way, especially if the dataset wasn't originally yours. While there are many ways to modify a dataframe, we'll only be dealing with a few here:  \n",
-        "* rename columns\n",
-        "* add columns\n",
-        "* remove columns"
+        "In addition to viewing subsets of a dataframe, we often want to modify dataframes as well. While there are many ways to modify a dataframe, we'll only focus on a few common approaches in this module:  \n",
+        "* Rename columns\n",
+        "* Add columns\n",
+        "* Remove columns"
       ],
       "metadata": {
         "id": "OrHdS_uEG_qt"
@@ -408,18 +408,21 @@
       "cell_type": "markdown",
       "source": [
         "### 7a. Renaming Columns\n",
-        "Say you read in a dataframe, and the column names are specified a bit differently than you'd like. For instance, maybe you prefer using underscores between words rather than the camel case that our states dataframe uses. The general syntax for renaming columns of a dataframe is as follows:  \n",
+        "Say you read in a dataframe, and the column names are specified a bit differently than you'd like. For instance, maybe you prefer using underscores between words (my_column) rather than the camel case (myColumn). The general syntax for renaming columns of a dataframe is as follows:  \n",
         "```\n",
-        "df_name.rename(columns={\n",
+        "df_name.rename(columns = {\n",
         "  'old1': 'new1',\n",
         "  'old2': 'new2',\n",
         "  'old3': 'new3'},\n",
         "  inplace = True)\n",
         "```\n",
-        "You only need to specify columns you'd like to rename, not those you'd like to keep as they are.\n",
+        "\n",
+        "You might recognize that we're using a dictionary in this approach! The key:value pairs are the original column names (e.g., old1) and the revised column names (e.g., new1).\n",
+        "\n",
+        "Note: You only need to specify columns you'd like to rename, not those you'd like to keep as-is.\n",
         "\n",
         "<font color='red'>Exercise 10</font>  \n",
-        "Rename the the columns of our `my_df` dataframe as follows:  \n",
+        "Using the sample syntax above, rename two of the columns of `my_df` as follows:  \n",
         "* Instead of `totalPop`, use `total_pop`\n",
         "* Instead of `hispPop`, use `hisp_pop`\n",
         "\n",
@@ -432,11 +435,7 @@
     {
       "cell_type": "code",
       "source": [
-        "my_df.rename(columns={\n",
-        "  'totalPop': 'total_pop',\n",
-        "  'hispPop': 'hisp_pop'},\n",
-        "  inplace = True)\n",
-        "my_df.head()"
+        ""
       ],
       "metadata": {
         "id": "HPJsjH3bI2HK"
@@ -448,17 +447,25 @@
       "cell_type": "markdown",
       "source": [
         "### 7b. Adding New Columns\n",
-        "You may feel like a dataframe is incomplete after reading it in. Perhaps you'd like to add another column of information. To do so, there are two steps:  \n",
+        "Next, we'll explore how to add new columns to a dataframe. In the population-related dataframe that we've been using, for example, you might want to add a column with the percentage of folks in each state who are Hispanic.\n",
+        "\n",
+        "In general, there are two steps to adding a new column:  \n",
         "1. Decide what to call the new column\n",
         "2. Calculate values to put in the new column\n",
         "\n",
-        "Here's the general syntax to use:  \n",
+        "Please below for some generic syntax:  \n",
         "`df_name['new_col_name'] = formula for calculating new values`\n",
         "\n",
-        "You can use values in the existing columns in the calculation for the new column. For instance, if you'd like to add a `hisp_ratio` column to our states dataframe, you'd take the value in the `hisp_pop` column for any given state and divide by the value in its `total_pop` column, then multiply by 100.  \n",
+        "Breaking this syntax down:\n",
+        "* We start with the name of the dataframe in question and indicate what we want to call the new column inside the square brackets (note that you'll need quote marks around the column name)\n",
+        "* Next, you'll include code that calculates new values to place in the column. How would you do this? Keep reading!\n",
+        "\n",
+        "Typically, you'll use values in existing columns to calculate values for the new column. For instance, to add a `hisp_percent` column to our population-related dataframe, you would:\n",
+        "1. Divide values in the `hisp_pop` column by those in the `total_pop` column\n",
+        "2. Multiply by 100  \n",
         "\n",
         "<font color='red'>Exercise 11</font>  \n",
-        "Run the cell below to see the output. This is the code for the example above."
+        "Read through and run the cell below to understand how to add this new column. "
       ],
       "metadata": {
         "id": "X4OMiK7CI3AN"
@@ -467,7 +474,7 @@
     {
       "cell_type": "code",
       "source": [
-        "my_df['hisp_ratio'] = my_df.hisp_pop / my_df.total_pop * 100\n",
+        "my_df['hisp_percent'] = my_df.hisp_pop / my_df.total_pop * 100\n",
         "my_df.head()"
       ],
       "metadata": {
@@ -480,7 +487,7 @@
       "cell_type": "markdown",
       "source": [
         "<font color='red'>Exercise 12</font>  \n",
-        "Now say you'd also like a column `non_hisp_pop` that gives the non-Hispanic population for each state. Write the code for this below, and be sure to display the results using `my_df.head()` at the end."
+        "Now say you'd also like a column `non_hisp_percent` that gives the percentage of non-Hispanic folks for each state. Write the code for this below, and be sure to display the results using `my_df.head()` at the end."
       ],
       "metadata": {
         "id": "V8MDANBHL9yl"
@@ -500,11 +507,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Some other examples you might create a new column for a dataframe to know:  \n",
-        "* The difference between a company's profits in one year compared to the previous (subtraction)\n",
+        "Finally, see below for additional examples of instances in which you could use existing values to create a new column:  \n",
+        "* The difference between a company's profits in one year compared to the previous year (subtraction)\n",
         "* Total points earned across different parts of an exam (addition)\n",
         "* Stock price multiplied by number of shares (multiplication)\n",
-        "* Course grade for students across multiple weighted exams (addition, multiplication, and division)"
+        "\n",
+        "Bonus: Although not covered in this module, you can also use existing values and conditional logic to create new values. For example, you might categorize each state in our population-related dataframe as having a high or low percentage of Hispanic folks based on a particular cutoff. See [this tutorial](https://datagy.io/pandas-conditional-column/) if you're curious."
       ],
       "metadata": {
         "id": "cXQooIHbMfsx"
@@ -514,15 +522,28 @@
       "cell_type": "markdown",
       "source": [
         "### 7c. Removing Columns\n",
-        "Just as adding columns can be beneficial, removing columns is sometimes necessary. To remove one or more columns from a dataframe, we use the `drop()` method:  \n",
+        "Just as adding columns can often be beneficial, removing columns is frequently necessary, especially in cases where you want to clean up a dataframe. \n",
+        "\n",
+        "To remove one or more columns from a dataframe, we use the `drop()` method:  \n",
         "`df_name.drop(columns = ['col1', 'col2', 'etc.'], inplace = True)`  \n",
         "\n",
         "<font color='red'>Exercise 13</font>  \n",
-        "Say you decide that you don't want the `hisp_ratio` or the `non_hisp_pop` columns afterall. Remove these columns from the `my_df` dataframe using the syntax above as a reference."
+        "Say you decide that you don't want the `hisp_percent` or the `non_hisp_percent` columns afterall. Remove these columns from the `my_df` dataframe using the syntax above as a reference."
       ],
       "metadata": {
         "id": "KCYaD8o5bJf2"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "nkmat-_BQ0no"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
